# qtado

./: CMakeLists.txt  qtado.pro
example/: CMakeLists.txt  example.pro  main.cpp
lib/: CMakeLists.txt  lib.pro  libtado.h  tado.cpp
lib/include/qtado/: libtado.h  tado.h
